Submission: Fix low contrast on "required" text
Fixes #165

--- a/source/wp-content/themes/wporg-showcase-2022/src/style/_jetpack.scss
+++ b/source/wp-content/themes/wporg-showcase-2022/src/style/_jetpack.scss
@@ -9,6 +9,7 @@
 		margin-inline-start: 0.25em;
 		font-size: 100% !important;
 		color: var(--wp--preset--color--charcoal-4);
+		opacity: 1 !important;
 	}
 }
 
